Made navbar fixed at the top of page. Add separator to account for layout shift (as CSSOM now ignores its position)

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -30,6 +30,8 @@
   --icon-size: 1.5rem;
 
   --padder-margin: 0.75rem;
+  --navbar-height: 70px;
+  --navbar-offset: calc(var(--navbar-height) + var(--padder-margin));
 }
 
 @media (prefers-color-scheme: dark) {
